# Calculadora-de-precos-de-imoveis

./: README.md  pyproject.toml
app/: app.py  logic.py  requirements.txt
app/Back End/: app.py  requirements.txt
app/Front End/templates.html/: index.html
app/templates.html/: index.html  resultados.html
